#! incorporated changes after review